Fix: Nav Bar Alingment & body overflow.

--- a/style.css
+++ b/style.css
@@ -296,9 +296,8 @@ a{
   left: 0;
   right: 0;
   z-index: 5;
-  padding: 15px;
-  height: 90px;
-  background-color: #000; /* Initially black */
+  padding: 17px;
+  background-color: #00000087; /* Initially black */
   color: white;
   display: flex;
   justify-content: space-between; /* Adjusted to space-between for better layout */
@@ -315,22 +314,14 @@ nav {
   display: flex;
   align-items: center;
   justify-content: center;
-  max-width: 1200px; /* Limit the width for better centering */
-  width: 100%; /* Ensure nav takes full width */
-  margin: 0 auto; /* Center the nav */
 }
 
 .logo {
   display: flex;
-  margin-left: 34px;
 }
 
 #nav-list {
-  display: flex;
-  gap: 1rem; /* Adjusted gap for better spacing */
   list-style: none;
-  margin-left: 3px;
-  padding: 0;
   align-items: center;
 }
 
@@ -339,7 +330,7 @@ nav {
   text-decoration: none;
   font-weight: 400;
   white-space: nowrap;
-  font-size: 20px;
+  font-size: 1.8rem;
 }
 
 .hamburger {
@@ -347,18 +338,14 @@ nav {
   background: none;
   border: none;
   color: white;
-  font-size: 1.5em;
+  font-size: 3.5em;
   cursor: pointer;
 }
 
 .mode-toggle {
-  position: fixed;
-  top: 20px;
-  right: 20px;
   border: none;
   background-color: white;
   cursor: pointer;
-  padding: 5px;
   z-index: 10; /* Ensure it stays above other elements */
 }
 
@@ -369,12 +356,6 @@ nav {
 
 /* Responsive Styles for smaller screens */
 @media (max-width: 768px) {
-  .main-head {
-    flex-direction: column;
-    height: auto;
-    padding: 10px;
-  }
-
   .hamburger {
     display: block; /* Show hamburger on small screens */
   }
@@ -1254,10 +1235,6 @@ footer {
   nav ul {
     text-align: center;
   }
-  #logo {
-    padding: 1.8rem;
-    text-align: center;
-  }
 
   .cloud {
     height: 40rem;
@@ -1317,14 +1294,10 @@ body.light-mode {
 
 /* Button styles */
 .mode-toggle {
-  position: fixed;
-  top: 10px;
-  right: 10px;
   background: none;
   border: none;
   cursor: pointer;
   outline: none;
-  font-size: 1.5em;
   transition: color 0.3s, transform 0.3s;
   padding: 15px;
 }
